--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Semeie</h1>
-
-        <p>Seja bem vindo ao nosso site que tem por seu foco, te informar melhor sobre tipos <br> de sementes e também como salvar a biodiversidade do nosso planeta</p>
+        <h1>SEMEIE</h1>
     </header>
     <nav>
         <a href="#">Fale conosco</a>
